<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Meteo App</string>
    <string name="action_settings">Paramères</string>
    <string name="fav_label">Favoris</string>
    <string name="search_input_title">Taper un filtre</string>
    <string name="prevision_label">Prévisions</string>
    <string name="selected_city">Ville selectionnée</string>
    <string name="temperature_label">0C°</string>
    <string name="current_date_label">Date courante</string>
    <string name="current_hour_label">Heure courante</string>
    <string name="current_weather_label">Météo courante</string>
    <string name="previsionWeekLabel">Details prévisions</string>
    <string name="hour">Heure</string>
    <string name="temperature">Temperature</string>
    <string name="day">Jour</string>
    <string name="search">Rechercher</string>
    <string name="provider_enabled">Le fournisseur %s est activé</string>
    <string name="provider_disabled">Le fournisseur %s est désactivé</string>    
    <string name="provider_new_status">Le fournisseur %1$s est en état : %2$s</string>
    <string name="new_location">New Location : Latitude = %1$s, Longitude = %2$s, Altitude = %3$s avec une précision de %4$s mètres </string>
    <string name="load_statut">Chargement</string>
</resources>
