<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:drawableTop="@drawable/back_btn"
        android:background="#FFFFFF" />

    <ListView
        android:id="@+id/todayPrevisionListView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/previsionLabel"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="60sp" >
    </ListView>

    <ImageView
        android:id="@+id/bottomBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/selectedCity"
        android:src="@drawable/bottom_bar" />

    <Button
        android:id="@+id/favButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/selectedCity"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/fav_btn_off"
        android:onClick="add" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/meteoView"
        android:text="@string/current_date_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hourLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dateLabel"
        android:text="@string/current_hour_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/todayPrevisionListView"
        android:src="@drawable/small_bottom_bar" />
    
    <TextView
        android:id="@+id/weatherLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"

        android:layout_below="@+id/meteoView"
        android:text="@string/current_weather_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/weatherLabel"
        android:layout_marginTop="14dp"
        android:src="@drawable/small_bottom_bar" />

    <TextView
        android:id="@+id/previsionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImageView01"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/prevision_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/selectedCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/selected_city"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/meteoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/currentTemperature"
        android:layout_below="@+id/bottomBar"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/currentTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/weatherLabel"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/selectedCity"
        android:text="@string/temperature_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
 
</RelativeLayout>
